src/app/shared/components/e-service-wrapper-buttons/e-service-wrapper-buttons.component.scss
// RACA secondary dune palette
$group1Background: #A29475; // 80%
$group1ActiveBackground: #8b8067; // 100%
$group1DisabledBackground: #C8BFAD; // 60%
$group1ActiveBorder: #DCD5C8; // 40%

// RACA secondary sea palette
$group4Background: #4194B3; // 100%
$group4ActiveBackground: #3a809a;
$group4DisabledBackground: #65A9C1; // 80%
$group4ActiveBorder: #B1D5E3; // 40%

.action-button {
  &:not(.dropdown-item) {
    color: #ffffff;
  }

  .action-info {
    visibility: hidden;
  }

  .icon-action-info {
    font-size: 18px;
    color: #ffffff;
  }

  &:hover, &:active, &:focus {
    .action-info {
      visibility: visible;
    }
  }
}

ul.dropdown-menu {
  min-width: 13rem;
  max-height: 60vh;
  overflow-y: auto;
  background: whitesmoke;

  .dropdown-item {
    border-bottom: 1px solid #d9d9d9;

    &:focus-visible {
      outline: none;
    }
  }
}

.button-group-1 {
  button {
    &.dropdown-item {
      &:hover, &.active, &:active, &:focus {
        color: #ffffff;
        background: $group1Background;
      }

      &:active, &:focus {
        box-shadow: 0 0 0 0.25rem $group1ActiveBorder;
      }
    }

    &:not(.dropdown-item) {
      background-color: $group1Background;
      border-color: white;

      &:hover {
        background-color: $group1ActiveBackground;
      }

      &:focus, &:active {
        background-color: $group1ActiveBackground;
        box-shadow: 0 0 0 0.25rem $group1ActiveBorder;
      }

      &:disabled {
        background-color: $group1DisabledBackground;
      }
    }
  }
}

.button-group-2 {
  button {
    &.dropdown-item {
      &:hover, &.active, &:active, &:focus {
        color: #ffffff;
        background: #9a264b;
      }

      &:active, &:focus {
        box-shadow: 0 0 0 0.25rem rgba(154, 38, 75, 0.25)
      }
    }

    &:not(.dropdown-item) {
      border-color: white;
    }
  }
}

.button-group-3 {
  button {
    &.dropdown-item {
      &:hover, &.active, &:active, &:focus {
        color: #ffffff;
        background: #157347;
      }

      &:active, &:focus {
        box-shadow: 0 0 0 0.25rem #75B798;
      }
    }

    &:not(.dropdown-item) {
      border-color: white;
    }
  }
}

.button-group-4 {
  button {
    &.dropdown-item {
      &:hover, &.active, &:active, &:focus {
        color: #ffffff;
        background: $group4Background;
      }

      &:active, &:focus {
        box-shadow: 0 0 0 0.25rem $group4ActiveBorder;;
      }
    }

    &:not(.dropdown-item) {
      background-color: $group4Background;
      border-color: white;

      &:hover {
        background-color: $group4ActiveBackground;
      }

      &:focus, &:active {
        background-color: $group4ActiveBackground;
        box-shadow: 0 0 0 0.25rem $group4ActiveBorder;
      }

      &:disabled {
        background-color: $group4DisabledBackground;
      }
    }
  }
}

